--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sunt quod culpa exercitationem iste enim ab facilis asperiores est explicabo modi impedit, dicta ullam inventore tempore eius, dolorem eveniet! Quae?</p>
     
+    <img src="c.png" alt="">
 </body>
 </html>
