--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sunt quod culpa exercitationem iste enim ab facilis asperiores est explicabo modi impedit, dicta ullam inventore tempore eius, dolorem eveniet! Quae?</p>
+
+    <div>
+        <h3>New blog</h3>
+        <h5>mama nana dada</h5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi explicabo numquam quam quibusdam, neque similique eligendi fugiat aspernatur possimus necessitatibus nisi, suscipit vel dolorem, voluptate quo nihil ea animi hic aliquid ipsa unde consequatur! Aspernatur placeat voluptates excepturi odio unde!</p>
+    </div>
     
     <img src="c.png" alt="">
 </body>
